# walaszek-quotes

./: Cargo.toml  database.sqlite  diesel.toml
migrations/2024-09-21-171935_create_shows/: up.sql
migrations/2024-09-21-172305_create_characters/: up.sql
migrations/2024-09-21-172357_create_quotes/: up.sql
src/: database.rs  lib.rs  main.rs  schema.rs
src/errors/: errors.rs
src/filters/: auth_filter.rs  db_filter.rs  mod.rs  shows_filter.rs
src/models/: character.rs  mod.rs  quote.rs  show.rs
src/repositories/: character_repository.rs  mod.rs  quote_repository.rs  show_repository.rs
src/resources/: mod.rs  quote_resource.rs
src/routers/: characters_router.rs  mod.rs  quotes_router.rs  shows_router.rs
