[package]
name = "walaszek-quotes"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.6", features = ["json"] }
deadpool-diesel = { version = "0.6.1", features = ["serde", "sqlite"] }
diesel = { version = "2.2.4", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15.7"
log = "0.4.22"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
